Adding copyright motice to readme

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@ Copy right 2019
 
 -->	
 <head>
-	<title>Sample Update</title>
+	<title>Chaging the Sample Tile</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
