Making chnages at simpe html

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@ Copy right 2019
 
 -->	
 <head>
-	<title>Chaging the Sample Tile</title>
+	<title>A Great WebSite</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,11 +18,11 @@ Copy right 2019
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Git course learning
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Wipro 2014</p>
 	</footer>
 </body>
 </html>
